# bevy_ecs_typewriter

./: .gitignore  Cargo.toml  readme.md  readme_zh-hans.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: README.md  ci.yml  coverage.yml
examples/: basic_control.rs  chain_typewriters.rs  dynamic_speed.rs  multilingual.rs  multiple_typewriters.rs  ui_integration.rs
src/: lib.rs
