[package]
name = "bevy_ecs_typewriter"
version = "0.1.0"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/bevy_ecs_typewriter"
description = "ECS typewriter system for Bevy engine"
exclude = [
    "target/*",
    ".github/*"
]

[dependencies]
bevy = "0.17.2"
